--- a/src/app/features/qr-generator/qr-generator.component.scss
+++ b/src/app/features/qr-generator/qr-generator.component.scss
@@ -43,8 +43,8 @@ input[type="file"] {
   display: grid;
   place-items: center;
   padding: 10px 0;
-  grid-template-columns: 5fr 1fr;
-  place-items: end end;
+  grid-template-columns: 1fr 60px;
+  place-items: center;
 }
 
 .button-container {
@@ -88,7 +88,7 @@ input[type="file"] {
 }
 
 .theme-violet {
-  width: 300px;
+  width: 100%;
   border-radius: 0;
   background-color: $primary-color !important;
 }
